<resources>
    <string name="app_name">Jenya\'s Android Labs</string>
    <string name="hello_message">Hello World!</string>
    <string name="button_message">I\'m a button</string>
    <string name="editmessage"> I\'m an EditText.</string>
    <string name="hinttext">Write something here</string>
    <string name="checkboxtext">Click if you like pizza</string>
    <string name="switchtext">Do you like coffee?</string>
    <string name="radiobuttontext">Do you like sushi?</string>
    <string name="spin_message">Spin flag</string>
    <string name="button1">button1</string>
    <string name="button2">button2</string>
    <string name="button3">button3</string>
</resources>