<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_message" />


    <Button
        android:id="@+id/mybutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:text="@string/button_message" />

    <Switch
        android:text="@string/switchtext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/myswitch"
        />


    <CheckBox
        android:text="@string/checkboxtext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/mycheckbox" />

    <RadioButton
        android:text="@string/radiobuttontext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/myradiobutton" />



    <EditText
        android:id="@+id/myedittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/editmessage"
        android:hint="@string/hinttext" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/app_icon"
        android:id="@+id/myimagebutton"/>

    <ImageView
        android:id="@+id/logo_algonquin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo_algonquin"
        />


</LinearLayout>